Display: swap added in order to ensure text remains visible during webfont load

--- a/public/css/oui-css/utils/_font.css
+++ b/public/css/oui-css/utils/_font.css
@@ -3,7 +3,7 @@
   src: url('../fonts/SamsungSharpSans-Regular.eot') format('embedded-opentype'),  url('../fonts/SamsungSharpSans-Regular.woff') format('woff'), url('../fonts/SamsungSharpSans-Regular.ttf')  format('truetype'), url('../fonts/SamsungSharpSans-Regular.svg#SamsungSharpSans-Regular') format('svg');
   font-weight: normal;
   font-style: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -11,7 +11,7 @@
   src: url('../fonts/SamsungSharpSans-Bold.eot') format('embedded-opentype'),  url('../fonts/SamsungSharpSans-Bold.woff') format('woff'), url('../fonts/SamsungSharpSans-Bold.ttf')  format('truetype'), url('../fonts/SamsungSharpSans-Bold.svg#SamsungSharpSans-Bold') format('svg');
   font-weight: normal;
   font-style: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -19,7 +19,7 @@
   src: url('../fonts/samsungone-300-webfont.woff') format('woff');
   font-weight: 300;
   font-style: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -27,7 +27,7 @@
   src: url('../fonts/samsungone-600-webfont.woff') format('woff');
   font-weight: 600;
   font-style: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -35,7 +35,7 @@
   src: url('../fonts/samsungone-700-webfont.woff') format('woff');
   font-weight: 700;
   font-style: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 @font-face {
@@ -43,7 +43,7 @@
   src: url('../fonts/samsungone-800-webfont.woff') format('woff');
   font-weight: 800;
   font-style: normal;
-  font-display: auto;
+  font-display: swap;
 }
 
 body {
